# open-robin

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AI_technical_logbook.md  ARISE_PUBLICATION_CHECKLIST.md  ARISE_PUBLICATION_ROADMAP.md  FIWARE_technical_logbook.md  HANDOFF_DDS_GEOMETRY.md  README.md  codecov.yml  config-dds.json  current_stack_feb22.md  docker-compose.macos.override.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  ros2_logbook.md  ros_bag_playback.md  setup_env.sh  vulcanexus_instructions.md
.github/: copilot-instructions.md
vulcanexus_ws/src/robin_core_bringup/: package.xml  setup.cfg  setup.py
vulcanexus_ws/src/robin_core_bringup/config/: plates.json
vulcanexus_ws/src/robin_core_bringup/launch/: robin_main.launch.py
vulcanexus_ws/src/robin_core_bringup/rviz/: view_scene.rviz
vulcanexus_ws/src/robin_core_bringup/urdf/: scene_macro.xacro  sim_ur_fronius_garmo.urdf.xacro  ur_fronius_garmo.urdf.xacro
vulcanexus_ws/src/robin_core_data/: CMakeLists.txt  README.md  package.xml
vulcanexus_ws/src/robin_core_data/config/: weld_data.yaml
vulcanexus_ws/src/robin_core_data/launch/: weld_data.launch.py
vulcanexus_ws/src/robin_core_data/resource/: robin_core_data
vulcanexus_ws/src/robin_core_data/robin_core_data/: __init__.py  telemetry_alignment.py
vulcanexus_ws/src/robin_core_data/scripts/: geometry_republisher.py  plate_markers.py  telemetry_aggregator_node.py  weld_data_node.py
vulcanexus_ws/src/robin_core_data/test/: test_progression_calculation.py  test_weld_data_node_integration.py
vulcanexus_ws/src/robin_core_planner/: CMakeLists.txt  package.xml
vulcanexus_ws/src/robin_core_planner/config/: robin_planner_params.yaml
vulcanexus_ws/src/robin_core_planner/launch/: moveit_planner.launch.py
vulcanexus_ws/src/robin_core_planner/robin_core_planner/: __init__.py  bead_layout.py  motion.py  tcp_utils.py  utils.py  welding_client.py
vulcanexus_ws/src/robin_core_planner/scripts/: robin_planner.py
vulcanexus_ws/src/robin_hardware_opcua/: CMakeLists.txt  package.xml
vulcanexus_ws/src/robin_hardware_opcua/config/: opcua_bridge.yaml
vulcanexus_ws/src/robin_hardware_opcua/launch/: opcua_bridge.launch.py
vulcanexus_ws/src/robin_hardware_opcua/src/: opcua_bridge_node.cpp
vulcanexus_ws/src/robin_hardware_ur/: package.xml  setup.cfg  setup.py
vulcanexus_ws/src/robin_hardware_ur/config/: initial_positions.yaml  robot_kinematics.yaml  ur10e_controllers.yaml
vulcanexus_ws/src/robin_hardware_ur/launch/: robot.launch.py
vulcanexus_ws/src/robin_hardware_ur/rviz/: view_scene.rviz
vulcanexus_ws/src/robin_hardware_ur/urdf/: ur.urdf.xacro  ur_gz.urdf.xacro
vulcanexus_ws/src/robin_interfaces/: CMakeLists.txt  package.xml
vulcanexus_ws/src/robin_interfaces/action/: ExecuteBead.action  WeldExperiment.action
vulcanexus_ws/src/robin_interfaces/msg/: ActiveBead.msg  BeadGeometry.msg  ExperimentBead.msg  ExperimentBeadSpec.msg  FroniusSample.msg  PlateLayout.msg  ProcessTelemetry.msg  WeldBead.msg  WeldPlate.msg  WeldProgression.msg  WelderData.msg
vulcanexus_ws/src/robin_interfaces/srv/: ApproveExperimentPlan.srv  CalibratePlatePlane.srv  CalibrateStickout.srv  FindSurface.srv  PlanExperiment.srv  SensorCommand.srv  SetFloat32.srv  SetInt32.srv  SetTcpMode.srv  SetUInt8.srv  SetWeldingParameters.srv  StartWeld.srv
vulcanexus_ws/src/robin_moveit_config/: CMakeLists.txt  package.xml
vulcanexus_ws/src/robin_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_cpp.yaml  pilz_cartesian_limits.yaml  servo_config.yaml
vulcanexus_ws/src/robin_moveit_config/launch/: ur_moveit.launch.py
vulcanexus_ws/src/robin_moveit_config/rviz/: moveit.rviz
vulcanexus_ws/src/robin_moveit_config/srdf/: robin.srdf.xacro  ur_macro.srdf.xacro
vulcanexus_ws/src/robin_rqt/: package.xml  plugin.xml  setup.cfg  setup.py
vulcanexus_ws/src/robin_rqt/config/: laser_profile.yaml
vulcanexus_ws/src/robin_rqt/launch/: operator_panel.launch.py
vulcanexus_ws/src/robin_rqt/robin_rqt/: calibration_controller.py  manual_controller.py  operator_panel.py  panel_state.py
vulcanexus_ws/src/robin_simulation/: README.md  package.xml  setup.cfg  setup.py
vulcanexus_ws/src/robin_simulation/launch/: sim_visualization.launch.py
vulcanexus_ws/src/robin_simulation/robin_simulation/: welding_sim_node.py  welding_simulator_lib.py  welding_vis_node.py
vulcanexus_ws/src/robin_simulation/rviz/: welding_sim.rviz
vulcanexus_ws/src/robin_simulation/urdf/: vis_ur_fronius_garmo.urdf.xacro
vulcanexus_ws/src/welding_demo/: package.xml  setup.py
vulcanexus_ws/src/welding_demo/launch/: welding_robin_demo.launch.py
vulcanexus_ws/src/welding_finetune_skill/: package.xml  setup.cfg  setup.py
vulcanexus_ws/src/welding_finetune_skill/welding_finetune_skill/: welding_finetune_skill_node.py
vulcanexus_ws/src/welding_home_skill/: package.xml  setup.cfg  setup.py
vulcanexus_ws/src/welding_home_skill/launch/: welding_home_skill.launch.py
vulcanexus_ws/src/welding_home_skill/welding_home_skill/: welding_home_skill_node.py
vulcanexus_ws/src/welding_http_bridge/: package.xml  setup.cfg  setup.py
vulcanexus_ws/src/welding_http_bridge/welding_http_bridge/: welding_http_bridge_node.py
vulcanexus_ws/src/welding_manual_skill/: package.xml  setup.cfg  setup.py
vulcanexus_ws/src/welding_manual_skill/welding_manual_skill/: welding_manual_skill_node.py
vulcanexus_ws/src/welding_msgs/: CMakeLists.txt  package.xml
vulcanexus_ws/src/welding_msgs/action/: ExecuteSeam.action  FineTuneModel.action  ManualAdjust.action  MoveToHome.action  MoveToZone.action  RequestAIRecommendation.action
vulcanexus_ws/src/welding_msgs/msg/: Intent.msg
vulcanexus_ws/src/welding_recommendation_skill/: package.xml  setup.cfg  setup.py
vulcanexus_ws/src/welding_recommendation_skill/welding_recommendation_skill/: welding_recommendation_skill_node.py
vulcanexus_ws/src/welding_seam_skill/: package.xml  setup.cfg  setup.py
vulcanexus_ws/src/welding_supervisor/: package.xml  setup.cfg  setup.py
vulcanexus_ws/src/welding_zone_skill/: package.xml  setup.cfg  setup.py
(+311 files in other folders)
