<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robin_core_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the ROBIN welding robot system</description>
  <maintainer email="jayant@mil-as.no">milaipc</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>robin_hardware_ur</exec_depend>
  <exec_depend>robin_hardware_garmo</exec_depend>
  <exec_depend>robin_hardware_fronius</exec_depend>
  <exec_depend>robin_hardware_opcua</exec_depend>
  <exec_depend>robin_core_sensor</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
