<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robin_core_planner</name>
  <version>0.0.0</version>
  <description>MoveIt-based motion planning and bead execution for ROBIN</description>
  <maintainer email="jayant@mil-as.no">Jayant</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>robin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <exec_depend>moveit_servo</exec_depend>
  <depend>robin_calibration</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
