<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robin_hardware_ur</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jayant@mil-as.no">Jayant</maintainer>
  <license>Apache-2.0</license>

  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>ur_description</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
