<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robin_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt configuration for ROBIN welding robot (UR10e + Fronius torch + Garmo sensor)</description>
  <maintainer email="jayant@mil-as.no">Jayant</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- MoveIt core -->
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_configs_utils</depend>

  <!-- Pilz industrial motion planner -->
  <depend>pilz_industrial_motion_planner</depend>

  <!-- Robot description and driver -->
  <exec_depend>robin_core_bringup</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <!-- Controller interface -->
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
