<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robin_rqt</name>
  <version>0.1.0</version>
  <description>RQT Operator Panel for ROBIN welding system</description>
  <maintainer email="operator@robin.local">ROBIN Team</maintainer>
  <license>MIT</license>

  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>robin_interfaces</depend>

  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
