<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robin_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>robin_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robin_core_bringup</exec_depend>
  <exec_depend>robin_hardware_ur</exec_depend>
  <exec_depend>robin_hardware_fronius</exec_depend>
  <exec_depend>robin_hardware_garmo</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>welding_http_bridge</exec_depend>
  <exec_depend>welding_supervisor</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
