<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>welding_finetune_skill</name>
  <version>0.1.0</version>
  <description>
    Mock implementation of the "fine-tune model" skill.
    Lifecycle action server triggered by the FINE_TUNE_MODEL intent
    (ROBIN dashboard "Fine-tune" button).
    Mock: 4 s with COLLECTING → UPLOADING → QUEUED phase feedback.
    Returns a stub sample count; in production replace with calls to the
    ROBIN ML pipeline to collect and submit telemetry for retraining.

    ros4hri compliance: conceptually implements ml_skills/FineTuneModel.
  </description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>welding_msgs</depend>
  <depend>lifecycle_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- ros4hri skill declaration: maps to ml_skills/fine_tune_model -->
    <implements type="skill" package="ml_skills" id="fine_tune_model"/>
  </export>
</package>
