<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>welding_manual_skill</name>
  <version>0.1.0</version>
  <description>
    Mock implementation of the "manual parameter adjust" skill.
    Lifecycle action server triggered by the MANUAL_ADJUST intent
    (ROBIN dashboard "Manual adjust" button).
    Mock: 2 s with VALIDATING → APPLYING → CONFIRMING phase feedback.
    Clamps the requested value to a safe operating range.

    ros4hri compliance: conceptually implements process_skills/ManualParameterAdjust.
  </description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>welding_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>robin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- ros4hri skill declaration: maps to process_skills/manual_parameter_adjust -->
    <implements type="skill" package="process_skills" id="manual_parameter_adjust"/>
  </export>
</package>
