<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>welding_msgs</name>
  <version>0.2.0</version>
  <description>
    Intent message and action definitions for the ROBIN welding HRI PoC.
    Includes motion/weld intents (MOVE_TO_HOME, EXECUTE_SEAM, ESTOP) and
    ROBIN dashboard button intents (START_PROCESS, REQUEST_AI_RECOMMENDATION,
    MANUAL_ADJUST, PAUSE_PROCESS, RESUME_PROCESS, STOP_PROCESS).

    Mirrors the hri_actions_msgs/msg/Intent structure used in ErgoBot_AI.
  </description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
