<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>welding_recommendation_skill</name>
  <version>0.1.0</version>
  <description>
    Mock implementation of the "request AI recommendation" skill.
    Lifecycle action server triggered by the REQUEST_AI_RECOMMENDATION intent
    (ROBIN dashboard "Ask for a new AI recommendation" button).
    Mock: 3 s with FETCHING → PROCESSING → COMPLETE phase feedback.
    Returns a stub JSON recommendation; in production replace with a call to
    the robin backend POST /ai-recommendation endpoint.

    ros4hri compliance: conceptually implements ai_skills/RequestRecommendation.
  </description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>welding_msgs</depend>
  <depend>lifecycle_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- ros4hri skill declaration: maps to ai_skills/request_recommendation -->
    <implements type="skill" package="ai_skills" id="request_recommendation"/>
  </export>
</package>
