<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>welding_seam_skill</name>
  <version>0.1.0</version>
  <description>
    Mock implementation of the "execute weld seam" skill.
    Lifecycle action server that simulates executing a Cartesian weld trajectory.
    Mock: 6 s with IGNITING → WELDING × 3 → FINISHING phase feedback.
    Also handles START_PROCESS intent (routed by the supervisor).

    ros4hri compliance: conceptually implements motion_skills/ExecuteCartesianTrajectory.
  </description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>welding_msgs</depend>
  <depend>lifecycle_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- ros4hri skill declaration: maps to motion_skills/execute_cartesian_trajectory -->
    <implements type="skill" package="motion_skills" id="execute_cartesian_trajectory"/>
  </export>
</package>
