<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>welding_seam_skill</name>
  <version>0.1.0</version>
  <description>
    "Execute weld seam" skill with simulation and hardware modes.
    Lifecycle action server for executing a Cartesian weld trajectory.
    Simulation mode (use_simulation:=true): 6 s mock with IGNITING → WELDING × 3 → FINISHING phases.
    Hardware mode (use_simulation:=false): delegates to /weld_experiment on RobinPlanner
    (robin_moveit_control), which sequences MoveItPy PTP/LIN motions + WeldingCoordinator arc.
    Also handles START_PROCESS intent (routed by the supervisor).

    ros4hri compliance: conceptually implements motion_skills/ExecuteCartesianTrajectory.
  </description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>welding_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>robin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- ros4hri skill declaration: maps to motion_skills/execute_cartesian_trajectory -->
    <implements type="skill" package="motion_skills" id="execute_cartesian_trajectory"/>
  </export>
</package>
