<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>welding_zone_skill</name>
  <version>0.1.0</version>
  <description>
    Mock implementation of the "move to weld zone" skill.
    Lifecycle action server that simulates navigating/moving the robot TCP
    to a named weld zone (A, B, or C). Mock: 4 s with phase feedback.

    ros4hri compliance: conceptually implements navigation_skills/NavigateToWaypoint.
  </description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>welding_msgs</depend>
  <depend>lifecycle_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- ros4hri skill declaration: maps to navigation_skills/navigate_to_waypoint -->
    <implements type="skill" package="navigation_skills" id="navigate_to_waypoint"/>
  </export>
</package>
